# ClaimsOS

./: .aiderules  .gitignore  Autonomous_Claims_OS_MVP.md  CLAUDE.md  DESIGN.md  README.md  X12_837P_Payload_Guide.md  code.html  detail-claim-plan.md  handoff.md  problem statement.md  tech-stack.md
apps/api/: README.md  pyproject.toml
apps/api/app/: main.py
apps/api/app/api/v1/routes/: agent.py  claims.py  members.py  policies.py  providers.py
apps/api/app/core/: config.py
apps/api/app/domain/agent/: models.py  service.py
apps/api/app/domain/claims/: adjudication_service.py  confidence_service.py  demo_data.py  document_intake_service.py  intake_service.py  models.py  payer_verification_service.py  policy_retrieval_service.py  repository.py  validation_service.py  x12_parser.py
apps/api/app/domain/members/: models.py  repository.py
apps/api/app/domain/policies/: __init__.py  ingestion_service.py  models.py  openai_retrieval_service.py  repository.py  retrieval_service.py
apps/api/app/domain/providers/: __init__.py  models.py  repository.py
apps/api/app/integrations/: openai_client.py  supabase.py
apps/api/tests/: test_agent_api.py  test_claims_api.py  test_members_api.py  test_policies_api.py  test_providers_api.py  test_sample_scenario_pack.py  test_x12_claims_api.py
apps/web/: index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.app.tsbuildinfo
infra/supabase/: 001_initial_claimsos.sql  006_members_foundation.sql  (+4 more)
memento/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
(+54 files in other folders)
