[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "claimsos-backend"
version = "0.1.0"
description = "ClaimsOS FastAPI backend"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "fastapi>=0.115.0,<1.0.0",
  "uvicorn[standard]>=0.30.0,<1.0.0",
  "pydantic>=2.8.0,<3.0.0",
  "pydantic-settings>=2.3.0,<3.0.0",
  "python-multipart>=0.0.9,<1.0.0",
  "httpx>=0.27.0,<1.0.0",
  "openai>=1.68.0,<2.0.0",
  "pypdf>=5.4.0,<6.0.0",
  "supabase>=2.6.0,<3.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0,<9.0.0",
]

[tool.setuptools.packages.find]
include = ["app*"]
